<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.david.kalculator.HomeActivity">

    <LinearLayout
        android:id="@+id/result_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculator"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/operations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size"
            tools:text="12+12+12+12+12+12" />

        <TextSwitcher
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            tools:text="12233221" />

    </LinearLayout>

    <include
        layout="@layout/element_calculator"
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
